<resources>
    <string name="app_name">sample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bernie S</string>
    <string name="nav_header_subtitle">bernie@pipeline.sbcc.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Tasks</string>
    <string name="menu_slideshow">History</string>
    <string name="menu_tools">Break In</string>
    <string name="menu_share">Settings</string>
<!--    <string name="menu_send">Send</string>-->

    <!--<string name="menu_gallery">Tasks</string>
    <string name="menu_slideshow">History</string>
    <string name="menu_tools">Break In</string>
    <string name="menu_share">Settings</string>
    <string name="menu_send">Send</string>-->
</resources>
