<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sample.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.sample.ui.tasks.TasksFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.sample.ui.history.HistoryFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_break_in"
        android:name="com.example.sample.ui.break_in.BreakInFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_break_in" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.sample.ui.settings.SettingsFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_settings" />

  <!--  <fragment
        android:id="@+id/nav_send"
        android:name="com.example.sample.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />-->
</navigation>